| Summary: | ASTERISK-25608: res_pjsip/contacts/statsd: Lifecycle events aren't consistent | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2015-12-03 14:09:48.000-0600 | Date Closed: | 2015-12-07 07:54:10.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There are at least a few issues...
No Removed event is ever sent. A static contact can be removed if a reload occurs and a dynamic one can be pruned if it's been unavailable for a certain period of time. RTT events with a rtt of 0 are being generated when a contact is unavailable which is misleading. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-12-03 14:09:50.265-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||